antex-rs/tui/src/bottom_pane/snapshots/antex_tui__bottom_pane__chat_composer__tests__ultra_accent_colors_composer_rail.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5439
expression: terminal.backend()
---
"                                                            "
" ┃ Ask Antex to do anything                                 "
" ┃                                                          "
" ┃                                                          "
" ┃                                                          "
" ┃                                                          "
" ┃                                                          "
"                                                            "
"  ? for shortcuts                        100% context left  "
