antex-rs/tui/src/bottom_pane/snapshots/antex_tui__bottom_pane__chat_composer__tests__vim_composer_search.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                        "
" ┃ a ǵg b हि gg                         " Hidden by multi-width symbols: [(11, " ")]
" ┃                                      "
" ┃                                      "
" ┃                                      "
" ┃                                      "
" ┃                                      "
"                                        "
"  ?ह                                    "
