antex-rs/tui/src/bottom_pane/snapshots/antex_tui__bottom_pane__chat_composer__tests__vim_replace_mode.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
" ┃ [Pasted Content 1001 chars]                                                                      "
" ┃                                                                                                  "
" ┃                                                                                                  "
" ┃                                                                                                  "
" ┃                                                                                                  "
" ┃                                                                                                  "
"                                                                                                    "
"                                                                                 100% context left  "
